# Os-labs

lab1/: 10_script.sh  1_script.sh  2_script.sh  3_script.sh  4_script.sh  5_script.sh  6_script.sh  7_script.sh  8_script.sh  9_script.sh  answer.txt  emails.lst  fourSymbolsWordLength.txt  hehe.txt
lab2/: 1_script.sh  1_task_output_file.txt  2_script.sh  2_task_output_file.txt  3_script.sh  4_script.sh  4_task_output_file.txt  5_script.sh  5_task_output_file.txt  5_temp_viox_output.txt  6_script.sh  7_script.sh  8_script.sh  temp_file.txt  toSavePrev.txt
lab3/: 1_script.sh  2_script.sh  3_script_hehe_explanation.txt  4_script.sh  4_script_killAllBackground.sh  4_script_limiter.sh  5_script_generator.sh  5_script_handler.sh  6_script_generator.sh  6_script_handler.sh  killProcessesFile
lab3/taskDir/: generator.sh  handler.sh
lab4/: -!?a_.\\@  backup.sh  hehe  rmtrash.sh  ter  untrash.sh  upback.sh
lab5/: mem.bash  tracking.sh  usage_log.txt
lab5/1_step/: dgesgForOneProc.txt  dmesgForOneProc.txt
lab5/2_experiment/: launchScripts.sh  newmem.bash
lab5/2_step/: mem2.bash  (+1 more)
lab6/: .clang-format  CMakeLists.txt
lab6/.cache/clangd/index/: helperStuff.c.23BB63F8716C527D.idx  helperStuff.h.B50B9DA2BB7B075F.idx  main.c.F708B0A5CBBBCFBB.idx
lab6/include/: helperStuff.h
lab6/include/filesystem/: fuse_operations.h
lab6/include/storage/: telegram_message_api.h  telegram_storage.h
lab6/src/: helperStuff.c  main.c
lab6/src/filesystem/: fuse_operations.c
lab6/src/storage/: telegram_message_api.c  telegram_storage.c
peasantlab6/: main  main.cpp  prevToSave
(+123 files in other folders)
